# RusTok

./: .architecture_progress  .changes-summary.md  .env.dev.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_RECOMMENDATIONS.md  ARCHITECTURE_REVIEW_INDEX.md  CHANGELOG.md  CODE_AUDIT_REPORT_2026-02-11.md  CODE_REVIEW_INDEX.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_UPDATES_2026-02-11.md  GITHUB_ISSUES_TEMPLATE.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.md  Makefile  PLATFORM_INFO_RU.md  PROGRESS_TRACKER.md  QUICK_WINS.md  README.md  README.ru.md  REVERT_NOTE.md  RUSTOK_MANIFEST.md  RUSTON_MANIFEST.md  SPRINT_3_COMPLETED.md  SPRINT_3_PROGRESS.md  SPRINT_4_PROGRESS.md  SPRINT_4_SESSION_SUMMARY.md  SUMMARY_DOCUMENTATION_UPDATES.md  SUMMARY_TAILWIND_FIX.txt  TAILWIND_CSS_SETUP.md  TAILWIND_CSS_SOLUTION_PLAN.md  TAILWIND_MIGRATION_SUMMARY.md  TASK_4.1_COMPLETION.md  (+14 more)
apps/server/migration/: Cargo.toml
apps/storefront/: Cargo.toml  README.md  build.rs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
apps/storefront/docs/: README.md
apps/storefront/src/: lib.rs  main.rs
crates/alloy/: Cargo.toml  README.md  rustok-module.toml
crates/alloy-scripting/: Cargo.toml  README.md
crates/alloy-scripting/docs/: README.md  implementation-plan.md
crates/alloy-scripting/src/: context.rs  error.rs  lib.rs  migration.rs  utils.rs
crates/alloy/docs/: README.md  implementation-plan.md
crates/alloy/src/: lib.rs  runtime.rs
crates/leptos-forms/: Cargo.toml  README.md
crates/leptos-forms/src/: error.rs  field.rs  form.rs  lib.rs  validator.rs
crates/rustok-ai/: Cargo.toml  README.md
crates/rustok-ai/admin/: Cargo.toml  README.md
crates/rustok-ai/docs/: README.md  implementation-plan.md
crates/rustok-ai/src/: direct.rs  entities.rs  lib.rs  model.rs  provider.rs  router.rs  runtime.rs  service.rs
crates/rustok-api/: Cargo.toml  README.md
crates/rustok-api/docs/: README.md
crates/rustok-api/src/: lib.rs  loco.rs  request.rs  route_selection.rs  ui.rs
crates/rustok-blog/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-blog/admin/: Cargo.toml  README.md
crates/rustok-blog/docs/: README.md  implementation-plan.md
crates/rustok-blog/src/: error.rs  lib.rs  seo_targets.rs
crates/rustok-blog/storefront/: Cargo.toml  README.md
crates/rustok-blog/tests/: integration.rs  module.rs  taxonomy_tags.rs
crates/rustok-cart/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-cart/docs/: README.md  implementation-plan.md
crates/rustok-cart/src/: error.rs  lib.rs
crates/rustok-cart/storefront/: Cargo.toml  README.md
crates/rustok-cart/tests/: cart_service_test.rs  module.rs  support.rs
crates/rustok-channel/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-channel/admin/: Cargo.toml
crates/rustok-channel/docs/: README.md  implementation-plan.md
crates/rustok-channel/src/: error.rs  lib.rs  policy.rs  resolution.rs  target_type.rs
crates/rustok-comments/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-comments/admin/: Cargo.toml
crates/rustok-comments/docs/: README.md  implementation-plan.md
crates/rustok-comments/src/: dto.rs  error.rs  lib.rs  services.rs
crates/rustok-commerce/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-commerce/admin/: Cargo.toml  README.md
crates/rustok-commerce/docs/: README.md  implementation-plan.md
crates/rustok-commerce/src/: lib.rs  search.rs  state_machine.rs  storefront_shipping.rs
crates/rustok-commerce/storefront/: Cargo.toml  README.md
crates/rustok-commerce/tests/: catalog_service_test.rs  checkout_service_test.rs  context_service_test.rs  graphql_runtime_parity_test.rs  graphql_surface_regression.rs  inventory_service_test.rs  module.rs  order_state_machine_properties.rs  pricing_service_test.rs  product_event_index_integration_test.rs  product_taxonomy_tags.rs  support.rs
crates/rustok-forum/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-forum/admin/: Cargo.toml  README.md
crates/rustok-forum/docs/: README.md  implementation-plan.md
crates/rustok-forum/src/: error.rs  lib.rs  seo_targets.rs  state_machine.rs
crates/rustok-forum/storefront/: Cargo.toml  README.md
crates/rustok-fulfillment/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-mcp/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-mcp/src/: lib.rs  (+6 more)
crates/rustok-order/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-product/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-search/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-seo/: Cargo.toml
crates/rustok-tax/: Cargo.toml  README.md
crates/rustok-taxonomy/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-test-utils/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-ui-routing/: Cargo.toml
crates/rustok-workflow/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
xtask/: Cargo.toml  README.md
xtask/src/: main.rs  manifest_io.rs  manifest_validation.rs  module_boundary_contracts.rs  module_cli_args.rs  module_commands.rs  module_contracts.rs  module_mutation_commands.rs  module_operation_previews.rs  module_permission_contracts.rs  module_publish_commands.rs  module_publish_readiness.rs  module_registry_commands.rs  module_registry_previews.rs  module_runner_commands.rs  module_runtime_contracts.rs  module_semantics.rs  module_transport_contracts.rs  module_ui_metadata_contracts.rs  parsing_helpers.rs  permission_policy.rs  preview_builders.rs  registry_artifacts.rs  registry_http.rs  registry_lifecycle.rs  registry_publish_lifecycle.rs  registry_reason_codes.rs  registry_request_lifecycle.rs  registry_runner_lifecycle.rs  registry_runner_types.rs  registry_status.rs  registry_transport.rs  registry_types.rs  root_commands.rs  runtime_contracts.rs  runtime_event_contracts.rs  runtime_parsing_helpers.rs  server_contracts.rs  server_event_runtime_contracts.rs  server_feature_contracts.rs  (+13 more)
(+1683 files in other folders)
