[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description.workspace = true
license.workspace = true

[dependencies]
toml.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
anyhow = "1.0"
semver = "1.0"
reqwest = { workspace = true, features = ["blocking", "json"] }
regex = "1.12"
