[package]
name = "rustok-storefront"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true }
leptos-auth = { workspace = true }
leptos-graphql = { workspace = true }
leptos-ui = { workspace = true }
leptos-hook-form = { workspace = true }
leptos-zod = { workspace = true }
leptos-table = { workspace = true }
leptos-zustand = { workspace = true }
leptos-shadcn-pagination = { workspace = true }
leptos-use = { workspace = true }
leptos_i18n = { workspace = true, features = ["ssr"] }
leptos-next-metadata = { workspace = true }
leptos_query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = "0.3"
rustok-api.workspace = true
rustok-blog-storefront = { path = "../../crates/rustok-blog/storefront" }
rustok-commerce-storefront = { path = "../../crates/rustok-commerce/storefront" }
rustok-content-storefront = { path = "../../crates/rustok-content/storefront" }
rustok-forum-storefront = { path = "../../crates/rustok-forum/storefront" }
rustok-pages-storefront = { path = "../../crates/rustok-pages/storefront" }
rustok-search-storefront = { path = "../../crates/rustok-search/storefront" }

[build-dependencies]
leptos_i18n_build = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = [
  "leptos-auth",
  "leptos-graphql",
  "leptos-hook-form",
  "leptos-table",
  "leptos-zod",
  "leptos-zustand",
  "leptos-shadcn-pagination",
  "leptos-use",
  "leptos_i18n",
  "leptos-next-metadata",
  "leptos_query",
  "leptos_router",
  "rustok-blog-storefront",
  "rustok-commerce-storefront",
  "rustok-content-storefront",
  "rustok-forum-storefront",
  "rustok-pages-storefront",
  "rustok-search-storefront",
]
