[package]
name = "rustok-storefront"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_i18n/ssr",
  "dep:loco-rs",
  "dep:rustok-content",
  "dep:rustok-tenant",
  "rustok-blog-storefront/ssr",
  "rustok-cart-storefront/ssr",
  "rustok-commerce-storefront/ssr",
  "rustok-forum-storefront/ssr",
  "rustok-pages-storefront/ssr",
  "rustok-pricing-storefront/ssr",
  "rustok-product-storefront/ssr",
  "rustok-region-storefront/ssr",
  "rustok-search-storefront/ssr",
]

[dependencies]
axum.workspace = true
tokio.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true }
leptos-auth = { workspace = true }
leptos-graphql = { workspace = true }
leptos-ui = { workspace = true }
leptos-hook-form = { workspace = true }
leptos-zod = { workspace = true }
leptos-table = { workspace = true }
leptos-zustand = { workspace = true }
leptos-shadcn-pagination = { workspace = true }
leptos-use = { workspace = true }
leptos_i18n = { workspace = true, features = ["ssr"] }
leptos-next-metadata = { workspace = true }
leptos_query = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded.workspace = true
futures = "0.3"
rustok-api.workspace = true
thiserror.workspace = true
loco-rs = { workspace = true, optional = true }
rustok-content = { workspace = true, optional = true }
rustok-tenant = { workspace = true, optional = true }
rustok-blog-storefront = { path = "../../crates/rustok-blog/storefront", default-features = false }
rustok-cart-storefront = { path = "../../crates/rustok-cart/storefront", default-features = false }
rustok-commerce-storefront = { path = "../../crates/rustok-commerce/storefront", default-features = false }
rustok-forum-storefront = { path = "../../crates/rustok-forum/storefront", default-features = false }
rustok-pages-storefront = { path = "../../crates/rustok-pages/storefront", default-features = false }
rustok-pricing-storefront = { path = "../../crates/rustok-pricing/storefront", default-features = false }
rustok-product-storefront = { path = "../../crates/rustok-product/storefront", default-features = false }
rustok-region-storefront = { path = "../../crates/rustok-region/storefront", default-features = false }
rustok-search-storefront = { path = "../../crates/rustok-search/storefront", default-features = false }

[build-dependencies]
leptos_i18n_build = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = [
  "leptos-auth",
  "leptos-graphql",
  "leptos-hook-form",
  "leptos-table",
  "leptos-zod",
  "leptos-zustand",
  "leptos-shadcn-pagination",
  "leptos-use",
  "leptos_i18n",
  "leptos-next-metadata",
  "leptos_query",
  "leptos_router",
  "rustok-blog-storefront",
  "rustok-cart-storefront",
  "rustok-commerce-storefront",
  "rustok-forum-storefront",
  "rustok-pages-storefront",
  "rustok-pricing-storefront",
  "rustok-product-storefront",
  "rustok-region-storefront",
  "rustok-search-storefront",
]
