[package]
name = "alloy-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
rhai = { version = "1.20", features = ["sync", "metadata"] }
thiserror = "2"
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
parking_lot = "0.12"
uuid = { workspace = true }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
