[package]
name = "alloy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Alloy transport adapters and GraphQL integration"

[dependencies]
alloy-scripting.workspace = true
async-graphql.workspace = true
axum.workspace = true
chrono.workspace = true
rustok-api.workspace = true
rustok-core.workspace = true
rustok-telemetry.workspace = true
serde_json.workspace = true
uuid.workspace = true
rhai-full = { package = "rhai", git = "https://github.com/rhaiscript/rhai", tag = "v1.24.0", features = ["sync", "metadata"] }
