[package]
name = "leptos-forms"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["RusToK Team"]
description = "Form handling and validation for Leptos applications"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
regex = "1"
