[package]
name = "rustok-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared RusToK web/API contracts for server adapters and module-facing GraphQL/HTTP integration"

[dependencies]
async-graphql.workspace = true
axum.workspace = true
base64.workspace = true
loco-rs.workspace = true
rustok-core.workspace = true
rustok-tenant.workspace = true
rustok-outbox.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
