[package]
name = "rustok-channel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Experimental core channel-management module for RusTok"

[dependencies]
rustok-core = { workspace = true }
async-trait.workspace = true
chrono.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rustok-test-utils.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
