[package]
name = "rustok-comments"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic comments domain for blog, pages, and other non-forum discussion surfaces"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rustok-content.workspace = true
rustok-core.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
