[package]
name = "rustok-comments"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic comments domain for blog and other opt-in non-forum discussion surfaces"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rustok-content.workspace = true
rustok-core.workspace = true
rustok-telemetry.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
