[package]
name = "rustok-commerce"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-graphql.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-outbox.workspace = true
async-trait.workspace = true
axum.workspace = true
rust_decimal.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
chrono.workspace = true
loco-rs.workspace = true
rustok-api.workspace = true
rustok-telemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
utoipa = { workspace = true, features = ["uuid", "chrono", "decimal"] }
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tokio.workspace = true
rustok-test-utils.workspace = true
proptest = "1.5"
rust_decimal_macros = "1.36"
