[package]
name = "rustok-commerce"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-graphql.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-outbox.workspace = true
rustok-commerce-foundation.workspace = true
rustok-cart.workspace = true
rustok-customer.workspace = true
rustok-product.workspace = true
rustok-region.workspace = true
rustok-pricing.workspace = true
rustok-inventory.workspace = true
rustok-order.workspace = true
rustok-payment.workspace = true
rustok-fulfillment.workspace = true
async-trait.workspace = true
axum.workspace = true
rust_decimal.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
chrono.workspace = true
loco-rs.workspace = true
rustok-api = { workspace = true, features = ["loco-adapter"] }
rustok-channel.workspace = true
rustok-telemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = ["uuid", "chrono", "decimal"] }
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tokio.workspace = true
rustok-test-utils.workspace = true
rustok-tenant.workspace = true
loco-rs = { workspace = true, features = ["testing"] }
tower.workspace = true
proptest = "1.11"
rust_decimal_macros = "1.36"
rustok-taxonomy.workspace = true
