[package]
name = "rustok-forum"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
async-graphql = { workspace = true, features = ["dataloader"] }
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
loco-rs.workspace = true
rustok-api.workspace = true
rustok-channel.workspace = true
rustok-telemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
rustok-content.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-outbox.workspace = true
rustok-profiles.workspace = true
rustok-taxonomy.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true

[dev-dependencies]
tokio.workspace = true
