[package]
name = "rustok-search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core search module for RusTok - Postgres-first search contracts, engine selection, and connector registry"

[dependencies]
rustok-core.workspace = true
rustok-events.workspace = true
async-trait.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
