[package]
name = "rustok-taxonomy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scope-aware taxonomy dictionary for shared and module-local terms"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rustok-content.workspace = true
rustok-core.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
slug = "0.1"
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rustok-test-utils.workspace = true
tokio.workspace = true
