[package]
name = "rustok-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
rustok-core = { path = "../rustok-core" }
rustok-content = { path = "../rustok-content" }
rustok-commerce = { path = "../rustok-commerce" }
rustok-server = { path = "../../apps/server" }

# Loco
loco-rs = { workspace = true, features = ["testing"] }

# Async runtime
tokio = { workspace = true }

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }

# HTTP
axum = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
lazy_static = { workspace = true }

# Testing
wiremock = "0.5"
testcontainers = "0.15"

[dev-dependencies]
tokio-test = "0.4"
