[package]
name = "rustok-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visual workflow automation module for RusToK platform"

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
cron = "0.16"
loco-rs.workspace = true
reqwest = { workspace = true }
rustok-api.workspace = true
rustok-core.workspace = true
rustok-events.workspace = true
rustok-outbox.workspace = true
rustok-tenant.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
