[package]
name = "migration"
version = "0.1.0"
edition = "2021"
license = "MIT"
description.workspace = true

[dependencies]
sea-orm-migration.workspace = true
serde_json.workspace = true
uuid.workspace = true
# Platform-core dependencies
rustok-core = { path = "../../../crates/rustok-core" }
# Module crates — each owns its own migration files
alloy = { path = "../../../crates/alloy" }
rustok-auth = { path = "../../../crates/rustok-auth" }
rustok-channel = { path = "../../../crates/rustok-channel" }
rustok-cart = { path = "../../../crates/rustok-cart" }
rustok-customer = { path = "../../../crates/rustok-customer" }
rustok-product = { path = "../../../crates/rustok-product" }
rustok-region = { path = "../../../crates/rustok-region" }
rustok-pricing = { path = "../../../crates/rustok-pricing" }
rustok-inventory = { path = "../../../crates/rustok-inventory" }
rustok-order = { path = "../../../crates/rustok-order" }
rustok-payment = { path = "../../../crates/rustok-payment" }
rustok-fulfillment = { path = "../../../crates/rustok-fulfillment" }
rustok-commerce = { path = "../../../crates/rustok-commerce" }
rustok-content = { path = "../../../crates/rustok-content" }
rustok-forum = { path = "../../../crates/rustok-forum" }
rustok-index = { path = "../../../crates/rustok-index" }
rustok-workflow = { path = "../../../crates/rustok-workflow" }

[dev-dependencies]
rust_decimal.workspace = true
rustok-test-utils = { path = "../../../crates/rustok-test-utils" }
serde_json.workspace = true
tokio.workspace = true
