[package]
name = "rustok-blog-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos_router.workspace = true
leptos-auth.workspace = true
leptos-graphql.workspace = true
leptos-ui.workspace = true
serde.workspace = true
serde_json.workspace = true
rustok-api.workspace = true
rustok-ui-routing.workspace = true
rustok-core.workspace = true
rustok-blog.workspace = true
