[package]
name = "rustok-blog-storefront"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
leptos-graphql.workspace = true
serde = { workspace = true, features = ["derive"] }
rustok-core.workspace = true
rustok-blog.workspace = true
rustok-api.workspace = true
