[package]
name = "rustok-cart-storefront"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Leptos storefront UI package for the rustok-cart module"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "dep:leptos_axum",
  "dep:loco-rs",
  "dep:rustok-cart",
  "dep:rustok-customer",
  "dep:rustok-pricing",
]

[dependencies]
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-graphql.workspace = true
leptos-ui-routing.workspace = true
loco-rs = { workspace = true, optional = true }
rustok-api.workspace = true
rustok-cart = { workspace = true, optional = true }
rustok-customer = { workspace = true, optional = true }
rustok-pricing = { workspace = true, optional = true }
sea-orm.workspace = true
rust_decimal.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid.workspace = true
